2005-10-13  Andrew Pinski  <pinskia@physics.uc.edu>

PR tree-opt/21304
        * tree-dfa.c (add_referenced_var): Only look at decls which
        have TREE_CONSTANT or TREE_READONLY set instead of if
        !TREE_PUBLIC or !TREE_CONSTANT.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@105390 138bc75d-0d04-0410-961f-82ee72b054a4